Dashboard overhaul
